--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,8 +37,8 @@ jobs:
       uses: docker/login-action@v2.0.0
       with:
         registry: ${{ inputs.ecr_registry }}/${{ inputs.service_name }}
-        username: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
-        password: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
+        username: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         ecr: true
         logout: true
 
